<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_edittext"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/codigo_produto" />

        <TextView
            android:id="@+id/codProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="vgfsgs"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_produto" />

        <TextView
            android:id="@+id/descProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="gdsgs"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preco" />

        <TextView
            android:id="@+id/preco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="R$ 80,00"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorRed" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/margem" />

        <TextView
            android:id="@+id/margem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Não Informado"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idade" />

        <TextView
            android:id="@+id/idade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Não informado"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vendas" />

        <TextView
            android:id="@+id/vendas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Não Informado"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo" />

        <TextView
            android:id="@+id/tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Não Informado"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estoque_loja" />

        <TextView
            android:id="@+id/estoqueLoja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Não Informado"
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:text="@string/cancelar"
            android:textAllCaps="false"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>