<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detalhe"
        android:text="detalhe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/etQuantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:focusable="true"
        android:hint="@string/quantidade"
        android:inputType="number"
        android:maxLines="1"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_white"
            android:text="@string/cancelar"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:textSize="15dp" />

        <Button
            android:layout_marginLeft="10dp"
            android:id="@+id/btnConfirmar"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:text="@string/confirmar"
            android:textAllCaps="false"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>