<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="start|bottom"
            android:src="@drawable/logo_caedu" />

        <TextView
            android:id="@+id/tvTituloTela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:gravity="end"
            android:text="@string/lista_sistemas"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15dp" />
    </LinearLayout>


    <Spinner
        android:id="@+id/spinnerFilial"
        style="?android:attr/spinnerItemStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_spinner" />

    <ListView
        android:id="@+id/listSistemas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_edittext"
        android:divider="@null"
        android:dividerHeight="0dp">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".2"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="@drawable/bg_button_white"
            android:text="@string/cancelar"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight=".5"
            android:background="@drawable/bg_button"
            android:text="@string/confirmar"
            android:textAllCaps="false"
            android:textSize="15dp" />
    </LinearLayout>


</LinearLayout>