<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="start|bottom"
            android:src="@drawable/logo_caedu" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:gravity="end"
            android:text="@string/auditoria_precos"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editCodProd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_edittext"
            android:drawableRight="@drawable/ic_search"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/produto"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp">

            <requestFocus />
        </EditText>

        <!--<ImageView-->
            <!--android:id="@+id/barcode"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight=".2"-->
            <!--android:src="@drawable/ic_barcode" />-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_green_dark_caedu"
            app:tabMode="scrollable">

        </android.support.design.widget.TabLayout>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".85">

    </android.support.v4.view.ViewPager>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".05"
        android:gravity="bottom|center"
        android:text="@string/versao_auditoria" />

</LinearLayout>