<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight=".3"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/logo_caedu"
            tools:ignore="ContentDescription" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/configuracoes"
        android:textSize="22dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_weight=".5"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:hint="Servidor"
            android:textColorHint="@color/colorBlack"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:hint="Diretório Virtual"
            android:textColorHint="@color/colorBlack"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etDiretorio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:hint="Filial"
            android:textColorHint="@color/colorBlack"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etFilial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_weight=".3">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_white"
            android:text="@string/cancelar"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:textSize="15dp" />

        <Button
            android:layout_marginLeft="10dp"
            android:id="@+id/btnOkConfig"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:text="@string/confirmar"
            android:textAllCaps="false"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>